--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>index</title>
+    <title>Dutch Treat</title>
+    <link href="css/" rel="stylesheet" />
 </head>
 <body>
 <h1>Dutch Treat</h1>
 <div>
-    <img src="img/VanGogh.jpg" alt="Alternate Text" />
+    <img src="img/VanGogh.jpg" alt="Alternate Text"/>
     <h3>Mug</h3>
     <ul>
         <li>Price: $9.99</li>
@@ -15,6 +16,29 @@
         <li>Description: A self Portrait</li>
     </ul>
     <button>Buy</button>
+</div>
+
+
+<div id="theForm">
+    <form >
+        <label>your name:</label>
+        <br />
+        <input type="text" name="name" value="" />
+        <br />
+        <label>Email:</label>
+        <br />
+        <input type="email" name="name" value="" />
+        <br />
+        <label>subject:</label>
+        <br />
+        <input type="text" name="name" value="" />
+        <br />
+        <label>message:</label>
+        <br />
+        <textarea rows="4"></textarea>
+        <br />
+        <input type="submit" name="name" value="Send Message" />
+    </form>
 </div>
 </body>
 </html>
