--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Dutch Treat</title>
-    <link href="css/" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
 <h1>Dutch Treat</h1>
-<div>
+<div class="product-info">
     <img src="img/VanGogh.jpg" alt="Alternate Text"/>
     <h3>Mug</h3>
-    <ul>
+    <ul class="product-props">
         <li>Price: $9.99</li>
         <li>Artist: Van Gogh</li>
         <li>Title: </li>
