--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,44 +1,73 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <title>Dutch Treat</title>
     <link href="css/site.css" rel="stylesheet" />
 </head>
+
 <body>
-<h1>Dutch Treat</h1>
-<div class="product-info">
-    <img src="img/VanGogh.jpg" alt="Alternate Text"/>
-    <h3>Mug</h3>
-    <ul class="product-props">
-        <li>Price: $9.99</li>
-        <li>Artist: Van Gogh</li>
-        <li>Title: </li>
-        <li>Description: A self Portrait</li>
-    </ul>
-    <button>Buy</button>
-</div>
+    <h1>Dutch Treat</h1>
+    <div class="product-info">
+        <img src="img/VanGogh.jpg" alt="Alternate Text" />
+        <h3>Mug</h3>
+        <ul class="product-props">
+            <li>Price: $9.99</li>
+            <li>Artist: Van Gogh</li>
+            <li>Title: </li>
+            <li>Description: A self Portrait</li>
+        </ul>
+        <button>Buy</button>
+    </div>
 
 
-<div id="theForm">
-    <form >
-        <label>your name:</label>
-        <br />
-        <input type="text" name="name" value="" />
-        <br />
-        <label>Email:</label>
-        <br />
-        <input type="email" name="name" value="" />
-        <br />
-        <label>subject:</label>
-        <br />
-        <input type="text" name="name" value="" />
-        <br />
-        <label>message:</label>
-        <br />
-        <textarea rows="4"></textarea>
-        <br />
-        <input type="submit" name="name" value="Send Message" />
-    </form>
-</div>
+    <div id="theForm">
+        <form>
+            <label>your name:</label>
+            <br />
+            <input type="text" name="name" value="" />
+            <br />
+            <label>Email:</label>
+            <br />
+            <input type="email" name="name" value="" />
+            <br />
+            <label>subject:</label>
+            <br />
+            <input type="text" name="name" value="" />
+            <br />
+            <label>message:</label>
+            <br />
+            <textarea rows="4"></textarea>
+            <br />
+            <input type="submit" id="buyButton" value="Send Message" />
+        </form>
+    </div>
+    <div>
+        <div id="loginToggle">Login</div>
+        <form class="popup-form" action="">
+            <div>
+                <label for="">username:</label>
+                <input type="text">
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="">
+            </div>
+            <div>
+                <input type="checkbox" name="" id="">
+                <label for="">Remember Me?</label>
+
+            </div>
+            <div>
+                <input type="submit" value="Login">
+            </div>
+        </form>
+    </div>
+
+
+
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
+
 </html>
