--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -39,7 +39,7 @@
             <br />
             <textarea rows="4"></textarea>
             <br />
-            <input type="submit" id="buyButton" value="Send Message" />
+            <input type="submit" id="submit" value="Send Message" />
         </form>
     </div>
     <div>
@@ -51,7 +51,7 @@
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="">
+                <input type="password" name="password" id="password">
             </div>
             <div>
                 <input type="checkbox" name="" id="">
